--- a/views/layout.pug
+++ b/views/layout.pug
@@ -12,6 +12,7 @@ html
         li.dropdown-hover
           a(href='/catalog') Catalog
             block categories
-      header.logo Formula 1 - Official Merchandise
+      header.logo
+        a(href='/') Formula 1 Official Store
     main 
       block content
