--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -20,12 +20,17 @@ h3 {
 	font-size: 1.25rem;
 }
 
-.logo {
+header {
 	text-align: center;
-	font-size: 2.5rem;
+	font-size: 3rem;
 	font-weight: 600;
 	width: 80%;
 	font-style: italic;
+	color: rgb(255, 255, 255);
+}
+
+header a,
+header a:hover {
 	color: rgb(255, 255, 255);
 }
 
@@ -37,15 +42,10 @@ nav {
 	background-color: rgb(225, 0, 0);
 	display: flex;
 	padding: 24px;
-	padding-bottom: 76px;
 }
 
-nav a {
+nav ul a {
 	color: rgb(255, 255, 255);
-}
-
-nav a:hover {
-	color: rgb(0, 200, 255);
 }
 
 nav > ul {
@@ -58,7 +58,8 @@ nav > ul {
 }
 
 nav > ul > li {
-	margin: 0 36px 0 36px;
+	margin-right: 48px;
+	margin-left: 12px;
 }
 
 .dropdown-hover:hover > .dropdown {
@@ -67,17 +68,53 @@ nav > ul > li {
 
 .dropdown {
 	visibility: hidden;
-	display: flex;
 	position: absolute;
-	left: 48px;
+	left: 0;
+	padding: 0 24px;
+	display: flex;
+	align-items: center;
+	background-color: rgb(225, 0, 0);
+	transition: 0.3s ease;
+	width: 100%;
+}
+
+.dropdown.vertical {
+	flex-direction: column;
+	background-color: rgb(225, 0, 0);
+	padding: 24px;
+	max-width: 25%;
+	align-items: initial;
+	word-wrap: break-word;
 }
 
 .dropdown > li {
-	padding: 24px 12px;
+	padding: 12px;
+	margin-right: 12px;
 }
 
-header {
-	font-size: 2rem;
+.dropdown.vertical > li {
+	padding: 12px;
+	margin-right: 0;
+	transition: 0.3s ease;
+	background: linear-gradient(
+			to left,
+			rgb(225, 25, 0) 50%,
+			rgb(150, 225, 225) 50%
+		)
+		right;
+	background-size: 200%;
+}
+
+.dropdown.vertical > li:hover {
+	background-position: left;
+}
+
+.dropdown > li a {
+	transition: 0.3s ease;
+}
+
+.dropdown > li:hover a {
+	color: rgb(0, 0, 0);
 }
 
 .content-container {
