--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -48,6 +48,10 @@ nav ul a {
 	color: rgb(255, 255, 255);
 }
 
+nav > ul > li > a:hover {
+	color: rgb(150, 225, 225);
+}
+
 nav > ul {
 	display: flex;
 	align-items: flex-end;
@@ -85,6 +89,10 @@ nav > ul > li {
 	max-width: 25%;
 	align-items: initial;
 	word-wrap: break-word;
+	overflow-y: scroll;
+	max-height: 45%;
+	scrollbar-width: none;
+	border-bottom-right-radius: 24px;
 }
 
 .dropdown > li {
@@ -93,8 +101,13 @@ nav > ul > li {
 }
 
 .dropdown.vertical > li {
-	padding: 12px;
+	padding: 0;
 	margin-right: 0;
+	display: flex;
+}
+
+.dropdown.vertical > li > a {
+	padding: 12px;
 	transition: 0.3s ease;
 	background: linear-gradient(
 			to left,
@@ -103,9 +116,10 @@ nav > ul > li {
 		)
 		right;
 	background-size: 200%;
+	width: 100%;
 }
 
-.dropdown.vertical > li:hover {
+.dropdown.vertical > li > a:hover {
 	background-position: left;
 }
 
@@ -117,7 +131,7 @@ nav > ul > li {
 	color: rgb(0, 0, 0);
 }
 
-.content-container {
+.grid-container {
 	display: grid;
 	grid-template-columns: repeat(auto-fill, 300px);
 	grid-auto-rows: 1fr;
@@ -129,8 +143,13 @@ main {
 	padding: 24px;
 }
 
-.content-container a {
+.grid-container a {
 	color: rgb(0, 0, 0);
+}
+
+.container {
+	display: flex;
+	justify-content: center;
 }
 
 .item {
@@ -140,6 +159,7 @@ main {
 	border-radius: 12px;
 	padding: 16px;
 	height: 100%;
+	min-height: 160px;
 }
 
 .item > div {
@@ -169,6 +189,7 @@ main {
 .item-container {
 	display: flex;
 	justify-content: center;
+	width: 50%;
 }
 
 .item-details {
@@ -243,18 +264,20 @@ ol {
 	color: rgb(255, 0, 0);
 }
 
-.item-create {
-	display: flex;
-	flex-direction: column;
-	height: 100%;
-	color: rgb(0, 0, 0);
-	background-color: rgb(200, 0, 0);
-	border-radius: 12px;
-	padding: 16px;
+.item-add {
 	font-weight: 600;
 }
 
-.item-create > div {
+.category-controls {
+	font-weight: 600;
+	text-align: center;
+}
+
+.category-controls > div {
+	padding: 24px 12px;
+}
+
+.item-add > div {
 	background-color: rgb(150, 225, 225);
 	padding: 8px;
 	flex: 1;
@@ -263,15 +286,20 @@ ol {
 	align-items: center;
 }
 
-.item-create h1 {
+.item-add h1 {
 	padding: 8px;
 }
 
-.item-create:hover {
+.item-add:hover {
 	background-color: rgb(150, 225, 225);
 }
 
-.item-create:hover > div {
+.item-add:hover > div {
 	color: rgb(255, 255, 255);
 	background-color: rgb(200, 0, 0);
+}
+
+.category-delete > *,
+.item-delete > * {
+	padding: 12px 0;
 }
