--- a/views/item_details.pug
+++ b/views/item_details.pug
@@ -8,15 +8,13 @@ block content
           h1= item.name
           p= item.description
         div.item-status
-          h2 Price: #{item.price > 0 ? `${item.price}$` : 'FREE'}
-          h3= (item.stock === 0) ? 'Out of stock: ' : `In stock: ${item.stock}`
+          h2= item.check_price
+          h3= item.check_stock
         if !item.permanent 
           div.item-controls
-            div
-              a(href= `${item._id}/delete`)
-                div.catalog-delete
-                  h1 Delete item
-              a(href= `${item._id}/update`)
-                div.catalog-update
-                  h1 Update item
-      
+            a(href= `${item._id}/update`)
+              div.catalog-update
+                h1 Update item
+            a(href= `${item._id}/delete`)
+              div.catalog-delete
+                h1 Delete item
