--- a/views/layout.pug
+++ b/views/layout.pug
@@ -11,7 +11,7 @@ html
           a(href='/') Home
         li.dropdown-hover
           a(href='/catalog') Catalog
-          block categories
+          include nav
       header.logo
         a(href='/') Formula 1 Official Store
     main 
