--- a/views/item_form.pug
+++ b/views/item_form.pug
@@ -4,9 +4,9 @@ block content
   div.container-form
     div.item-form
       h1= title
-      form(method='POST' action='')
+      form(method='POST' action='' enctype='multipart/form-data')
         label(for='name') Name:
-          input#name(type='text' name='name' minlength=1 maxlength=30 value=(item===undefined ? '' : item.name) placeholder=`Item name`)
+          input#name(type='text' name='name' minlength=3 maxlength=30 value=(item===undefined ? '' : item.name) placeholder=`Item name` required='true')
         label(for='description') Description:
           textarea#description(type='text' name='description' rows=7 maxlength=100 placeholder=`Item description`) #{item===undefined ? '' : item.description}
         label(for='category') Category:
@@ -22,9 +22,19 @@ block content
             else
               option(value=category._id) #{category.name}
         label(for='price') Price:
-          input#price(type='number' name='price' min=0 value=(item===undefined ? '' : item.price) placeholder=`Item price in dollars`)
+          input#price(type='number' step=0.01 name='price' min=0 value=(item===undefined ? '' : item.price) placeholder=`Item price in dollars` required='true')
         label(for='stock') Stock:
-          input#stock(type='number' name='stock' min=0 value=(item===undefined ? '' : item.stock) placeholder=`Item stock`)
+          input#stock(type='number' step=0.01 name='stock' min=0 value=(item===undefined ? '' : item.stock) placeholder=`Item stock` required='true')
+        label(for='picture') Picture:
+          input#picture(type='file' name='picture')
+        if item
+          if item.permanent
+            input#itemispermanent(type='hidden' name='itemispermanent' value='true')
+            label(for='adminpass') This is an original shop item. You need admin password to delete it:
+              input#adminpass(type='password' name='adminpass' minlength=1 placeholder='Admin password' required='true')
+            if pass_check === false
+              ol.errors-msg
+                li!= 'Wrong admin password!'
         button.btn(type='submit') Submit
 
       if errors
