--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -88,10 +88,10 @@ nav > ul > li {
 
 .dropdown > li {
 	padding: 12px;
-	margin-right: 12px;
+	margin-right: 6px;
 }
 
-@media only screen and (max-width: 1024px) {
+@media only screen and (max-width: 1200px) {
 	.dropdown {
 		flex-direction: column;
 		background-color: rgb(225, 0, 0);
@@ -150,7 +150,7 @@ nav > ul > li {
 }
 
 main {
-	padding: 80px 40px;
+	padding: 60px 40px;
 }
 
 .grid-container a {
@@ -169,21 +169,21 @@ main {
 	border-radius: 12px;
 	padding: 16px;
 	height: 100%;
-	min-height: 160px;
+	min-height: 200px;
 }
 
 .item > div {
 	background-color: rgb(150, 225, 225);
 	padding: 8px;
-	flex: 1;
 	display: flex;
+	flex: 1;
 	flex-direction: column;
 	justify-content: space-between;
+	word-break: break-all;
 }
 
 .item-data {
 	padding: 8px;
-	flex: 0 0 3;
 }
 
 .item-data > * {
@@ -198,7 +198,6 @@ main {
 .item-status {
 	margin-top: 12px;
 	padding: 8px;
-	flex: 0 0 3;
 }
 
 .item-container .item-status > * {
@@ -216,15 +215,20 @@ main {
 
 .item-controls {
 	padding: 8px;
-	padding-top: 24px;
 	display: flex;
 	justify-content: space-between;
+}
+
+.item-controls > * {
+	padding: 12px;
 }
 
 .item-container {
 	display: flex;
 	justify-content: center;
 	width: 50%;
+	max-width: 800px;
+	min-width: fit-content;
 }
 
 .item-details {
@@ -233,7 +237,45 @@ main {
 	border-radius: 12px;
 	background-color: rgb(200, 0, 0);
 	padding: 24px;
-	min-height: 400px;
+	min-height: 600px;
+	min-width: fit-content;
+}
+
+.item-img {
+	height: 200px;
+	width: 200px;
+	margin: 12px auto;
+	transition: 0.5s ease-in-out;
+}
+
+.item-details .item-img:hover {
+	transform: scale(2);
+	transform-origin: top center;
+}
+
+.item-img img {
+	display: block;
+	width: 100%;
+	height: 100%;
+}
+
+.item-no-img {
+	background-color: rgb(0, 0, 0);
+	color: rgb(255, 0, 0);
+	height: 160px;
+	width: 160px;
+	margin: 12px auto;
+}
+
+.item-no-img::before {
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	content: '?';
+	font-weight: 900;
+	font-size: 4rem;
+	height: 160px;
+	width: 160px;
 }
 
 .container-form {
@@ -255,19 +297,19 @@ main {
 	background-color: rgb(150, 225, 225);
 	border-radius: 12px;
 	min-width: 280px;
-	width: 30%;
+	width: 40%;
 	padding: 8px;
 	text-align: center;
 }
 
-@media only screen and (max-width: 1024px) {
+@media only screen and (max-width: 1200px) {
 	.category-form,
 	.item-form {
-		width: 50%;
+		width: 55%;
 	}
 }
 
-@media only screen and (max-width: 600px) {
+@media only screen and (max-width: 768px) {
 	.category-form,
 	.item-form {
 		width: 70%;
@@ -300,7 +342,11 @@ select {
 }
 
 .btn {
-	padding: 4px 12px;
+	font-weight: 600;
+	font-size: 1rem;
+	border: solid 1px rgb(0, 0, 0);
+	border-radius: 4px;
+	padding: 8px 16px;
 }
 
 ol {
@@ -330,7 +376,6 @@ ol {
 .item-add > div {
 	background-color: rgb(150, 225, 225);
 	padding: 8px;
-	flex: 1;
 	display: flex;
 	justify-content: center;
 	align-items: center;
@@ -340,16 +385,84 @@ ol {
 	padding: 8px;
 }
 
-.item-add:hover {
-	background-color: rgb(150, 225, 225);
+.item:hover {
+	filter: brightness(110%);
 }
 
-.item-add:hover > div {
-	color: rgb(255, 255, 255);
-	background-color: rgb(200, 0, 0);
+.item.item-add:hover {
+	color: rgb(200, 0, 0);
 }
 
-.category-delete > *,
-.item-delete > * {
+.item.category-controls a:hover {
+	color: rgb(200, 0, 0);
+}
+
+.item-delete {
+	display: flex;
+	min-width: fit-content;
+}
+
+.item-delete .item-container {
+	width: 70%;
+	max-width: 600px;
+}
+
+.item-delete form > *:not(.del-cal-btns) {
+	margin: 0;
+}
+
+.category-delete {
+	width: 100%;
+}
+
+.category-delete > :not(.grid-container) {
+	width: 50%;
+}
+
+.category-delete form > *:not(.del-cal-btns) {
+	margin: 0;
+}
+
+.del-cal-btns {
+	margin: 12px 0;
+	display: flex;
+	justify-content: space-between;
+}
+
+.del-cal-btns .btn {
+	cursor: pointer;
+	margin: 0;
+}
+
+.del-cal-btns .btn:hover {
+	filter: brightness(125%);
+}
+
+.category-delete form > label * {
+	margin: 12px 0;
+}
+
+.item-delete form > label * {
+	margin: 12px 0;
+}
+
+.item-delete > div {
+	width: 30%;
+	margin: 0 24px;
+}
+
+.item-delete > div:not(.item) > * {
 	padding: 12px 0;
+}
+
+.category-delete > * {
+	padding: 12px 0;
+}
+
+.btn-delete {
+	background-color: rgb(225, 0, 0);
+}
+
+.btn-cancel {
+	background-color: rgb(150, 225, 225);
 }
