--- a/views/layout.pug
+++ b/views/layout.pug
@@ -14,10 +14,10 @@ html
           include nav
       header.logo
         a(href='/') Formula 1 Official Store
-    if nav_current_path.length
+    if nav_current_directory.length
       div.current-path
         ul
-          each path in nav_current_path
+          each path in nav_current_directory
             li
               a(href=path.setPath) #{path.name}
     main
