--- a/views/nav.pug
+++ b/views/nav.pug
@@ -3,4 +3,4 @@ ul.dropdown
     li
       a(href=category.url) #{category.name}
   li.category-create
-    a(href='/category/create') + New category
+    a(href='/catalog/category/create') + New category
