--- a/views/category_delete.pug
+++ b/views/category_delete.pug
@@ -3,13 +3,15 @@ extends layout
 block content
   div.container
     div.category-delete
-      h1 #{title}: #{category.name}
-      p Description: #{category.description}
+      div.delete-box
+        h1 #{title}: #{category.name}
+        p Description: #{category.description}
+        if category_items.length
+          p Can not delete non-empty category. Delete the following items and try again:
       if category_items.length
-        p Can not delete non-empty category. Delete the following items and try again:
         div.grid-container
           each item in category_items
-            a(href= '.' + item.url)
+            a(href= `.${item.url}`)
               div.item
                 div
                   div.item-data
@@ -17,11 +19,11 @@ block content
                     p= item.description
                   div.item-status
                     div.item-price
-                      h2= `Price:`
-                      h2= item.price > 0 ? `${item.price}$` : 'FREE'
+                      h2= 'Price:'
+                      h2= item.price > 0 ? item.price : 'FREE'
                     div.item-stock
-                      h3= (item.stock === 0) ? `Out of stock: ` : `In stock:`
-                      h3= (item.stock === 0) ? `` : `${item.stock}`
+                      h3= (item.stock === 0) ? 'Out of stock' : 'In stock: '
+                      h3= (item.stock === 0) ? 'N/A' : item.stock
       else
         p Are you sure you want to delete #{category.name} category?
         form(method='POST' action='')
