--- a/views/item_delete.pug
+++ b/views/item_delete.pug
@@ -18,13 +18,13 @@ block content
           div.del-cal-btns
             a
               button.btn.btn-delete(type='submit') Delete
-            a(href= '..' + item.url)
+            a(href= `..${item.url}`)
               button.btn.btn-cancel(type='button') Cancel
       div.item.item-container
         div
           if item.imgName
             div.item-img
-              img(src='/data/uploads/' + item.imgName)
+              img(src=`/data/uploads/${item.imgName}`)
           else
             div.item-no-img
           div.item-data
@@ -32,8 +32,8 @@ block content
             p= item.description
           div.item-status
             div.item-price
-              h2= `Price:`
-              h2= item.price > 0 ? `${item.price}$` : 'FREE'
+              h2= 'Price:'
+              h2= item.price > 0 ? item.price : 'FREE'
             div.item-stock
-              h3= (item.stock === 0) ? `Out of stock: ` : `In stock:`
-              h3= (item.stock === 0) ? `` : `${item.stock}`
+              h3= (item.stock === 0) ? 'Out of stock' : 'In stock'
+              h3= (item.stock === 0) ? 'N/A' : item.stock
