--- a/views/item_list.pug
+++ b/views/item_list.pug
@@ -3,7 +3,7 @@ extends layout
 block content
   div.grid-container
     each item in item_list
-      a(href= item.category.url + item.url)
+      a(href= `${item.category.url}${item.url}`)
         div.item
           div
             div.item-data
@@ -11,16 +11,16 @@ block content
               p= item.description
             div.item-status
               div.item-price
-                h2= `Price:`
-                h2= item.price > 0 ? `${item.price}$` : 'FREE'
+                h2= 'Price:'
+                h2= item.price > 0 ? item.price : 'FREE'
               div.item-stock
-                h3= (item.stock === 0) ? `Out of stock: ` : `In stock:`
-                h3= (item.stock === 0) ? `` : `${item.stock}`
+                h3= (item.stock === 0) ? 'Out of stock' : 'In stock: '
+                h3= (item.stock === 0) ? 'N/A' : item.stock
     a(href= '/catalog/item/create')
       div.item.item-add
         div
           h1 Add new item
-    if !catalog
+    if category
       div.item.category-controls
         div
           a(href= `${category._id}/update`)
