--- a/views/item_delete.pug
+++ b/views/item_delete.pug
@@ -28,12 +28,12 @@ block content
           else
             div.item-no-img
           div.item-data
-            h1= item.name
-            p= item.description
+            h1 #{item.name}
+            p #{item.description}
           div.item-status
             div.item-price
-              h2= 'Price:'
-              h2= item.price > 0 ? item.price : 'FREE'
+              h2 Price:
+              h2 #{item.check_price}
             div.item-stock
-              h3= (item.stock === 0) ? 'Out of stock' : 'In stock'
-              h3= (item.stock === 0) ? 'N/A' : item.stock
+              h3 Stock:
+              h3 #{item.check_stock}
