--- a/views/item_details.pug
+++ b/views/item_details.pug
@@ -10,11 +10,11 @@ block content
         else
           div.item-no-img
         div.item-data
-          h1= item.name
-          p= item.description
+          h1 #{item.name}
+          p #{item.description}
         div.item-status
-          h2= item.check_price
-          h3= item.check_stock
+          h2 #{item.check_price}
+          h3 #{item.check_stock}
         div.item-controls
           a(href= `${item._id}/update`)
             div.catalog-update
