--- a/views/item_list.pug
+++ b/views/item_list.pug
@@ -15,7 +15,7 @@ block content
                 h2 #{item.check_price}
               div.item-stock
                 h3 Stock:
-                h3 #{tem.check_stock}
+                h3 #{item.check_stock}
     a(href= '/catalog/item/create')
       div.item.item-add
         div
