--- a/views/layout.pug
+++ b/views/layout.pug
@@ -15,7 +15,7 @@ html
       header.logo
         a(href='/') Formula 1 Official Store
     if nav_current_directory.length
-      div.current-path
+      div.current-directory
         ul
           each path in nav_current_directory
             li
