--- a/views/item_delete.pug
+++ b/views/item_delete.pug
@@ -7,7 +7,8 @@ block content
         h1 #{title}: #{item.name}
         p Are you sure you want to delete #{item.name} item?
         form(method='POST' action='')
-          input#itemid(type='hidden' name='itemid' required='true' value=item._id )
+          input#itemid(type='hidden' name='itemid' required='true' value=item._id)
+          input#itemimagename(type='hidden' name='itemimagename' required='true' value=item.imgName)
           if item.permanent
             input#itemispermanent(type='hidden' name='itemispermanent' value='true')
             label(for='adminpass') This is an original shop item. You need to enter admin password to delete it:
@@ -24,7 +25,7 @@ block content
         div
           if item.imgName
             div.item-img
-              img(src=`/data/uploads/${item.imgName}`)
+              img(src=`/uploads/images/${item.imgName}`)
           else
             div.item-no-img
           div.item-data
