--- a/views/item_form.pug
+++ b/views/item_form.pug
@@ -22,9 +22,14 @@ block content
             else
               option(value=category._id) #{category.name}
         label(for='price') Price:
-          input#price(type='number' step=0.01 name='price' min=0 value=(item===undefined ? '' : item.price) placeholder='Item price in dollars' required='true')
+          input#price(type='number' step=0.01 name='price' min=0 max=9999999.99 value=(item===undefined ? '' : item.price) placeholder='Item price in dollars' required='true')
         label(for='stock') Stock:
-          input#stock(type='number' name='stock' min=0 value=(item===undefined ? '' : item.stock) placeholder='Item stock' required='true')
+          input#stock(type='number' name='stock' min=0 max=9999 value=(item===undefined ? '' : item.stock) placeholder='Item stock' required='true')
+        if item
+          if item.imgName
+            div.item-img
+              input#itemimagename(type='hidden' name='itemimagename' required='true' value=item.imgName)
+              img(src=`/uploads/images/${item.imgName}`)
         label(for='picture') Picture:
           input#picture(type='file' name='picture')
         if item
